--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "rest-facade": "^1.2.7",
     "url-join": "0.0.1",
     "superagent": "^1.1.0",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "chai": "^2.2.0",
